--- a/2-CSS_Directory/Nav_top_bar_menu.css
+++ b/2-CSS_Directory/Nav_top_bar_menu.css
@@ -38,7 +38,7 @@
 {
     background: none;
     border: none;
-    border-left: solid 1px #000;
+    border-left: solid 1px whitesmoke;
     outline: none;
     box-shadow: none;
 }
@@ -70,7 +70,7 @@
 {
     background: none;
     border: none;
-    border-left: solid 1px #000;
+    border-left: solid 1px whitesmoke;
     outline: none;
     box-shadow: none;
 }
