--- a/2-CSS_Directory/Section_daily_weather_data.css
+++ b/2-CSS_Directory/Section_daily_weather_data.css
@@ -8,7 +8,7 @@
     padding: 1rem 3rem 1rem 3rem;
 }
 
-.item_1
+.day_item_1
 {
     display: flex;
     align-items: stretch;
@@ -44,7 +44,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 0rem 4rem 0rem 2rem;
+    padding: 0rem 1.3rem 0rem 1rem;
 
 }
 #current_temperature
@@ -82,7 +82,7 @@
 
 
 /*ITEM 2*/
-.item_2
+.day_item_2
 {
     display: flex;
     flex-direction: row;
@@ -90,7 +90,7 @@
 
     /*Glass effect*/
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1));
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
     padding: 0rem 2rem 0rem 2rem;
 }
 
