--- a/2-CSS_Directory/Nav_top_bar_menu.css
+++ b/2-CSS_Directory/Nav_top_bar_menu.css
@@ -14,15 +14,18 @@
     display: flex;
     align-items: baseline;
 }
+
 #icon_location
 {
     padding-left: 2rem;
     height: 1.5rem;
 }
+
 #location
 {
     padding-left: 0.9rem;
 }
+
 #Choose_Celsius
 {
     margin-left: 2rem;
@@ -31,9 +34,12 @@
     outline: none;
     box-shadow: none;
 }
-#Choose_Celsius:hover{
+
+#Choose_Celsius:hover
+{
     font-weight: bold;
 }
+
 #Farhenheit
 {
     background: none;
@@ -42,7 +48,9 @@
     outline: none;
     box-shadow: none;
 }
-#Farhenheit:hover{
+
+#Farhenheit:hover
+{
     font-weight: bold;
 }
 /*Stop - top_right_corner_section */
@@ -54,9 +62,10 @@
     flex-direction: row-reverse;
     align-items: center;
 }
+
 .menu
 {
-    padding-left: 7em;
+    padding-left: 7rem;
 }
 
 #Choose_FR
@@ -66,6 +75,7 @@
     outline: none;
     box-shadow: none;
 }
+
 #Choose_ENG
 {
     background: none;
